# omikuji_bot

./: .env.example  Cargo.toml  LICENSE
migrations/0001_omikujis/: down.sql  up.sql
migrations/2021-01-11-121530_messages/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
