[package]
name = "omikuji_bot"
version = "0.1.0"
authors = ["Howard Liu <howard@ixnet.work>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.8"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
chrono = "0.4.19"
diesel = { version = "1.4.5", features = ["mysql", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
rand = "0.5.0"
async-trait = "0.1.42"

# If encountered problem in building h2, try `RUSTFLAGS="--cfg has_std" cargo build`